[gd_scene load_steps=4 format=3 uid="uid://cga5exowbbbid"]

[ext_resource type="Script" path="res://spawn_zone/spawn_zone_Scene_all.gd" id="1_xrkta"]
[ext_resource type="Texture2D" uid="uid://bbqcunlmsfs7j" path="res://end_zone/end_zone_atlas_texture.tres" id="2_ktu58"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l02il"]
size = Vector2(32, 28)

[node name="spawn_zone_Scene_all" type="Area2D"]
script = ExtResource("1_xrkta")

[node name="spawn_zone_AtlasTexture" type="Sprite2D" parent="."]
position = Vector2(0, -16)
texture = ExtResource("2_ktu58")

[node name="spawn_zone_CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0, -14)
shape = SubResource("RectangleShape2D_l02il")

[node name="SpawnContainer" type="Node2D" parent="."]

[node name="SpawnLocation1" type="Marker2D" parent="SpawnContainer"]

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="WaveTimer" to="." method="_on_wave_timer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
